[workspace.package]
authors = ["DiaSird"]
categories = ["encoding"]
description = "A modern Nintendo DS emulator written in Rust"
edition = "2024"
keywords = ["emulator", "rust"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/DiaSird/gb-book"                     # NOTE: Without it, CLI & CI build will error.
rust-version = "1.91"
version = "0.1.0"

[workspace]
members = ["code/core", "code/desktop", "code/wasm"]
resolver = "2"

[workspace.dependencies]

# workspace members
gb_core = { path = "./code/core" }
